# FederatedAISimulations

./: README.md
agent/simple-agent/: .env  README.md  main.py
agent/simple-rag/: README.MD  main.py  realistic_restaurant_reviews.csv  vector.py
agent/simple-rag/chrome_langchain_db/: chroma.sqlite3
code/: README.md  client.py  fl.ipynb  server.py
coordinatoragent/: README.md  pyproject.toml
coordinatoragent/coordinatoragent/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
first-fl-app/: README.md  pyproject.toml
first-fl-app/first_fl_app/: __init__.py  client_app.py  server_app.py  task.py
newproject/: README.md  pyproject.toml
newproject/newproject/: __init__.py  client_app.py  server_app.py  task.py
